--- a/CRM/css/style.scss
+++ b/CRM/css/style.scss
@@ -66,6 +66,7 @@ $phone-s-media: 479px;
   border-radius: $radius-l;
   transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
 }
+
 // 按鈕-XL
 .btn--primary-xl {
   @include btn-solid;
@@ -147,6 +148,11 @@ $phone-s-media: 479px;
     padding-left: 6px;
   }
 }
+.btn--bg-w{
+  background-color: #fff;
+  color: $color-green-grass;
+}
+
 %btn-result {
   box-sizing: border-box;
   border: 1px transparent solid;
