--- a/school/css/style.scss
+++ b/school/css/style.scss
@@ -104,7 +104,11 @@ $min-w: 320px;
   }
 
 }
-
+.btn-bg-w {
+  background-color: #fff;
+  color: #8E8E8E;
+  border: #fff;
+}
 .btn-disabled {
   cursor: initial;
   background-color: #B1B1B1;
@@ -159,7 +163,7 @@ textarea {
   display: block;
   border-radius: $radius-m;
   position: relative;
-
+  background-color: #fff;
   &::after {
     content: "";
     position: absolute;
@@ -181,7 +185,7 @@ textarea {
     font-size: $f-size-l;
     border: #DCDCDC 1px solid;
     border-radius: $radius-m;
-    line-height: 46px;
+    line-height: 44px;
     color: #333;
     -webkit-appearance: none;
     -moz-appearance: none;
@@ -192,7 +196,7 @@ textarea {
     transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
 
     &:hover {
-      border-color: $color-gray;
+      border-color: $color-main-blue;
     }
 
     &::-ms-expand {
@@ -212,13 +216,11 @@ textarea {
     }
   }
 }
-input.default{
-  text-align: center;
-}
+
 input.default,
 textarea.default {
   width: 100%;
-  line-height: 46px;
+  line-height: 44px;
   height: 46px;
   padding: 0 20px;
   font-size: $f-size-l;
@@ -253,7 +255,38 @@ input.has-error {
     border: 1px $color-red solid;
   }
 }
-
+.input-date{
+  position: relative;
+  &::after{
+    content: "";
+    position: absolute;
+    top: 4px;
+    right: 8px;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: #fff;
+    background-image: url(../images/svg/icon_calendar.svg);
+    @include img-default;
+    background-size: 40%;
+    pointer-events: none;
+  }
+}
+.input-search{
+  position: relative;
+  .icon-search {
+    position: absolute;
+    top: calc(50% - 9px);
+    right: 18px;
+    width: 18px;
+    height: 18px;
+    background-image: url(../images/svg/icon_search.svg);
+    @include img-default;
+  }
+  input{
+    text-align: center;
+  }
+}
 
 // both btn
 .both-btn {
@@ -679,6 +712,9 @@ main{
   .top-text-wrap{
     text-align: center;
   }
+  input.default{
+    text-align: center;
+  }
   input.id{
     color: $color-main-blue;
     font-weight: bold;
@@ -831,16 +867,45 @@ main{
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
-    align-items: center;
+    align-items: self-start;
   }
   .top-text-wrap{
     width: initial;
     h3.main-title{
       padding: 10px 0;
     }
+    p.date{
+      padding:5px 0;
+      font-size: $f-size-s;
+      color: $color-gray;
+      font-family: Arial, Helvetica, sans-serif;
+      text-align: center;
+    }
   }
 }
-
+.class-status {
+  padding: 0px 15px 10px 15px;
+  max-width: 1060px;
+  margin: 0 auto;
+  .student-nb{
+    color: $color-gray;
+    font-size: $f-size-s;
+    padding: 0px 20px 15px 20px;
+    span{
+      color: $color-main-blue;
+      font-size: $f-size-l;
+      font-weight: bold;
+    }
+  }
+  .btn-primary-xl {
+    font-size: $f-size-m;
+    height: 42px;
+    margin: 0 5px;
+    min-width: initial;
+    flex: 1;
+    @include has-box-shadow;
+  }
+}
 .top-text-wrap {
   position: relative;
   width: 100%;
@@ -848,6 +913,7 @@ main{
 
   h3.main-title {
     font-weight: bold;
+    text-align: center;
     font-size: $f-size-l;
     position: relative;
     padding: 20px 0;
@@ -1096,7 +1162,7 @@ main{
   width: 125px;
   a{
     min-height: 46px;
-    opacity: .8;
+    opacity: .65;
     width: 100%;
     // display: block;
     border-radius: $radius-s;
@@ -1178,13 +1244,25 @@ main{
 .main-wrap{
   padding-bottom: 75px;
   .mid-content{
-    padding: 10px 0;
+    padding:10px 0;
+  }
+  .top-card-year{
+    width: calc(100% + 40px);
+    padding:10px 50px;
+    margin-left: -30px;
+    font-size: 1rem;
+    font-weight: bold;
+    color: $color-main-blue;
+    position: sticky;
+    top: 110px;
+    z-index: 2;
+    background-color: #ECEDF2;
   }
   .a-card{
     width: 100%;
     border-radius: $radius-m;
     background-color: #B0C2D2;
-    padding: 15px;
+    padding: 10px 10px 10px 15px;
     display: flex;
     margin-bottom: 14px;
     @include has-box-shadow;
@@ -1218,7 +1296,7 @@ main{
         font-size: $f-size-s;
         font-weight: bold;
       }
-      a.classroom{
+      .classroom{
         font-size: $f-size-ss;
         color: #fff;
         padding: 10px 0;
@@ -1263,31 +1341,78 @@ main{
           width: 100%;
           height: 6px;
           background-color: #D9D9D9;
-          border-radius: 20px;
+          border-radius: 6px;
           &::-webkit-progress-bar {
             background-color: #FFF;
-            border-radius: 20px;
+            border-radius: 6px;
           }
           &::-webkit-progress-value {
             background-color: #FFE459;
-            border-radius: 20px;
+            border-radius: 6px;
           }
         }
       }
     }
   }
-  .first{
+  .first, .online {
     background-color: $color-main-blue;
   }
   .second{
     background-color: #86BCEE;
   }
+
+  .class-list{
+    width: 100%;
+    padding: 15px 0;
+    li{
+      position: relative;
+      width: 100%;
+      border-radius: $radius-m;
+      background-color: #fff;
+      padding: 10px;
+      margin-bottom: 14px;
+      text-align: center;
+      border: 1px solid #DCDCDC;
+      cursor: pointer;
+      display: -webkit-flex;
+      display: flex;
+      -webkit-align-items: center;
+      align-items: center;
+      -webkit-justify-content: center;
+      justify-content: center;
+      &:active{
+        background-color: #67abff25;
+      }
+      p{
+        font-weight: bold;
+        display: inline-block;
+        line-height: 1.5;
+        font-size: $f-size-m;
+        color:#333;
+      }
+    }
+  }
+  .icon-return{
+    li{
+      &::after{
+        position: absolute;
+        content: "";
+        right: 15px;
+        top: calc(50% - 7.5px);
+        width: 15px;
+        height: 15px;
+        display: block;
+        background-image:url(../images/svg/icon_return.svg);
+        @include img-default;
+      }
+    }
+  }
 }
 
 // popup - style
-.white-popup {
+.popup {
   position: relative;
-  background: #fff;
+  background: #ECEDF2;
   width: auto;
   max-width: 800px;
   margin: 20px auto;
@@ -1340,10 +1465,12 @@ main{
 .popup-container {
   .top-text-wrap {
     h3.main-title {
-      padding-top: 15px;
+      padding-top: 30px;
     }
   }
-
+  .a-row{
+    margin-bottom: 10px;
+  }
   .both-btn {
     padding: 25px 15px 15px 15px;
   }
